--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ time_block = "charmonium.time_block._cli:main"
 
 [tool.poetry.dependencies]
 python = "^3.6"
+psutil = "^5.7.0"
 
 [tool.poetry.dev-dependencies]
 twine = "^3.1.1"
@@ -34,9 +35,6 @@ sphinx-autodoc-annotation = "^1.0-1"
 bump2version = "^1.0.0"
 tox = "^3.15.2"
 
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
 [tool.tox]
 # According to tox docs
 # The tox configuration can also be in pyproject.toml (if you want to avoid an extra file).
@@ -57,3 +55,6 @@ commands =
     poetry install
     pytest --quiet --exitfirst tests
 """
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
