--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --doctest-modules --doctest-modules --doctest-glob="*.rst"
+addopts = --doctest-modules --doctest-glob="*.rst" --cov=charmonium/time_block --cov-report=term-missing
