--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,6 @@ twine = "^3.1.1"
 autoflake = "^1.3.1"
 isort = "^4.3.21"
 black = "^19.10b0"
-pylint = "^2.5.2"
 pylint-exit = "^1.1.0"
 mypy = "^0.780"
 pytest = "^5.4.1"
@@ -34,6 +33,8 @@ sphinx-autoapi = "^1.4.0"
 sphinx-autodoc-annotation = "^1.0-1"
 bump2version = "^1.0.0"
 tox = "^3.15.2"
+pylint = "^2.6.0"
+wrapt = "^1.12.1"
 
 [tool.tox]
 # According to tox docs
