--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,9 +14,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # using pyenv to install multiple Python versions on the same instance is more efficient than a build matrix
-      # - uses: gabrielfalcao/pyenv-action@v6
-      #   with:
-      #     versions: 3.6.12, 3.7.9, 3.8.5
+      - uses: gabrielfalcao/pyenv-action@v6
+        with:
+          versions: 3.6.12, 3.7.9, 3.8.5
 
       # THAT DIDN"T WORK!!
       # I'm salty, but I guess I'll have to do it myself.
@@ -42,11 +42,11 @@ jobs:
       #   with:
       #     python-version: 3.7
 
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.8.5
+      # - uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.8.5
 
       - run: |
           cd "${GITHUB_WORKSPACE}"
-          pip install tox
+          python -m pip install tox
           tox
