--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,10 +4,6 @@ on:
   pull_request:
     branches: [master]
 
-env:
-  python_versions: 3.6.10 3.7.7 3.8.2
-  # Installs the same versions as in Tox
-
 jobs:
   build:
     name: Test
@@ -17,14 +13,18 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # using pyenv to install multiple Python versions on the same instance is more efficient than a build matrix
-      - uses: gabrielfalcao/pyenv-action@v6
-        id: install_pyenv
-
-      - uses: actions/cache@v2
+      # Install the same versions as in Tox
+      - uses: actions/setup-python@v2
         with:
-          path: ${{ steps.install_pyenv.outputs.pyenv_root }}
-          key: ${{ env.python_versions }}
+          python-version: 3.6
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
       - run: |
           pyenv install ${python_versions}
