--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,6 +26,11 @@ jobs:
         with:
           python-version: 3.8
 
+      - uses: actions/cache@v2
+        with:
+          path: {{ env.GITHUB_WORKSPACE }}/.tox
+          key: .tox
+
       - run: |
           cd "${GITHUB_WORKSPACE}"
           python -m pip install tox
