--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 time_block = "charmonium.time_block._cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 psutil = "^5.7.0"
 
 [tool.poetry.dev-dependencies]
@@ -42,20 +42,19 @@ wrapt = "^1.12.1"
 # Currently only the old format is supported via legacy_tox_ini, a native implementation is planned though.
 legacy_tox_ini = """
 [tox]
-envlist = py36
+envlist = py37,py38
+# See tool.poetry.dependencies.python
 isolated_build = True
 
-[tox:.package]
-# note tox will use the same python version as under what tox is installed to package
-# so unless this is python 3 you can require a given python version for the packaging
-# environment via the basepython key
-basepython = python3
-
 [testenv]
+deps = poetry
+setenv = MYPYPATH=stubs
 commands =
-    poetry install
-    pytest --quiet --exitfirst tests
+  poetry install
+  mypy --namespace-packages -p charmonium.time_block
+  pytest --quiet --exitfirst tests/
 """
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
