--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,11 @@ setenv = MYPYPATH=stubs
 commands =
   poetry install
   mypy --namespace-packages -p charmonium.time_block
-  pytest --quiet --exitfirst tests/
+  pytest --quiet --exitfirst
 """
+
+[tool.pytest.ini_options]
+addopts = "--doctest-glob='*.rst'"
 
 [build-system]
 requires = ["poetry>=0.12"]
