--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "charmonium.time_block"
 version = "0.3.0"
 description = "Time a block of code."
 authors = ["Samuel Grayson <sam+dev@samgrayson.me>"]
-license = "MPL-2.0"
+license = "MIT"
 readme = "README.rst"
 repository = "https://github.com/charmoniumQ/charmonium.time_block.git"
 packages = [
