--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,5 +59,5 @@ commands =
 addopts = "--doctest-glob='*.rst'"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
