--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,27 +14,21 @@ packages = [
 time_block = "charmonium.time_block._cli:main"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-psutil = "^5.7.0"
+python = "^3.9"
 
-[tool.poetry.dev-dependencies]
-twine = "^3.1.1"
-autoflake = "^1.3.1"
-isort = "^4.3.21"
-black = "^19.10b0"
-pylint-exit = "^1.1.0"
-mypy = "^0.780"
-pytest = "^5.4.1"
-pytest-cov = "^2.10.0"
-coverage = "^5.1"
-codecov = "^2.1.4"
-sphinx = "^3.1.0"
-sphinx-autoapi = "^1.4.0"
-sphinx-autodoc-annotation = "^1.0-1"
-bump2version = "^1.0.0"
-tox = "^3.15.2"
-pylint = "^2.6.0"
-wrapt = "^1.12.1"
+[tool.poetry.group.dev.dependencies]
+bump2version = "^1.0.1"
+mypy = "^1.17.1"
+pytest = "^8.4.1"
+tox = "^4.28.4"
+autoflake = "^2.3.1"
+isort = "^6.0.1"
+black = "^25.1.0"
+pylint = "^3.3.8"
+coverage = "^7.10.4"
+pylint-exit = "^1.2.0"
+types-psutil = "^7.0.0.20250801"
+pytest-asyncio = "^1.1.0"
 
 [tool.tox]
 # According to tox docs
@@ -42,7 +36,7 @@ wrapt = "^1.12.1"
 # Currently only the old format is supported via legacy_tox_ini, a native implementation is planned though.
 legacy_tox_ini = """
 [tox]
-envlist = py37,py38
+envlist = py39,py310,py311,py312
 # See tool.poetry.dependencies.python
 isolated_build = True
 
